one-dto-mapper-derive/tests/compile_fail/unwrap_or_cant_be_used_with_with_fn.rs
use one_dto_mapper_derive::From;

struct OptionalDto {
    age: Option<u16>,
}

#[derive(From)]
#[from(NumericDto)]
struct StringDto {
    #[from(unwrap_or = "16")]
    #[from(with_fn = "std::convert::identity")]
    age: u16,
}

fn main() {}
